<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGreen"
    tools:context=".Views.Activities.MainActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/label_spin_to_play"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/textsize_25" />

    <LinearLayout
        android:id="@+id/llData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTitle"
        android:layout_marginTop="@dimen/margin_10"
        android:orientation="horizontal">

        <LinearLayout

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/margin_5"
                android:text="12345"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/textsize_20" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/label_spin_to_play"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/textsize_15" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/margin_5"
                android:text="$1230"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/textsize_20" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/label_my_bet"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/textsize_15" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/margin_5"
                android:text="$1230"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/textsize_20" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/label_balance"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/textsize_15" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tvLabelLuckyNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llData"
        android:layout_marginTop="@dimen/margin_10"
        android:gravity="center"
        android:text="1,2,3,4,8"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/textsize_20" />


    <TextView
        android:id="@+id/tvLuckyNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvLabelLuckyNum"
        android:layout_marginTop="@dimen/margin_10"
        android:gravity="center"
        android:text="Your lucky numbers"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/textsize_15" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvLuckyNum">

        <rubikstudio.library.LuckyWheelView
            android:id="@+id/luckyWheel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="@dimen/margin_10"
            app:lkwBackgroundColor="#FFFFFFFF"
            app:lkwCenterImage="@drawable/wheel_center"
            app:lkwCursor="@drawable/pin"
            app:lkwTextColor="@color/colorWhite" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivPin"
                android:layout_width="20dp"
                android:layout_height="20dp"

                android:layout_centerInParent="true"

                android:layout_marginBottom="-3dp"
                android:src="@drawable/pin" />

            <Button
                android:id="@+id/btnPlay"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_below="@+id/ivPin"
                android:layout_centerInParent="true"
                android:background="@drawable/bg_circular_white_button"
                android:text="Spin" />
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>